--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -1,44 +1,115 @@
+.question-page{
+    width: 100%;
+    height:100vh;
+    background-color:#F5F7FB;
+    color: #293264; 
+    font-family:'Trebuchet MS';
+    padding-top: 5%;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 900;
+}
+.all-questions-container{
+    width: 40%;
+    margin: auto;
+    /* text-align: left; */
+}
+
+.single-question{
+    margin-bottom: 50px;
+}
+
+.question{
+    margin-bottom: 10px;
+}
+
 .answers{
     display: flex;
     flex-direction: row;
     gap:20px
 }
 .answer{
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     gap: 20px;
-    border: 1px solid white;
+    border: 0.7px solid #4D5B9E;
     padding: 10px;
+    border-radius: 8px;
+    background-color: #F5F7FB;
+    color: #293264;
+    min-width: 100px;
+    text-align: center;
+    padding: 4px;
 }
+
 .answer-selected{
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     gap: 20px;
-    border: 1px solid white;
+    border: 0.7px solid #4D5B9E;
     padding: 10px;
-    background-color: yellow;
+    border-radius: 8px;
+    background-color: #D6DBF5;
+    color: #293264;
+    min-width: 100px;
+    text-align: center;
+    padding: 4px;
 }
 .answer-correct{
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     gap: 20px;
-    border: 1px solid white;
+    /* border: 0.7px solid #4D5B9E; */
     padding: 10px;
-    background-color: green;
+    border-radius: 8px;
+    background-color: #94D7A2;
+    color: #293264;
+    min-width: 100px;
+    text-align: center;
+    padding: 4px;
+    border: none;
 }
 .answer-wrong{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    border: 1px solid white;
-    padding: 10px;
-    background-color: red;
+     /* display: flex; */
+     flex-direction: row;
+     gap: 20px;
+     /* border: 0.7px solid #4D5B9E; */
+     padding: 10px;
+     border-radius: 8px;
+     background-color: #F8BCBC;
+     color: #293264;
+     min-width: 100px;
+     text-align: center;
+     padding: 4px;
+     opacity: 50%;
+     border: none;
 }
 .answer-not-selected{
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     gap: 20px;
-    border: 1px solid white;
+    border: 0.7px solid #4D5B9E;
     padding: 10px;
-    background-color: gray;
+    border-radius: 8px;
+    background-color: #F5F7FB;
+    color: #293264;
+    min-width: 100px;
+    text-align: center;
+    padding: 4px;
+    opacity: 50%;
+
+}
+.btn-check{
+    width:120px;
+    height: 35px;
+    background-color: #4D5B9E;
+    color: #F5F7FB;
+    border-radius: 10px;
+    border: none;
+    margin-left:20px ;
+}
+.footer-btn-container{
+    text-align: center;
+    width: 100%;
+    margin: auto;
 }
