--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -5,7 +5,7 @@
     color: #293264; 
     font-family:'Trebuchet MS';
     padding-top: 5%;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 18px;
     font-weight: 900;
 }
@@ -16,7 +16,7 @@
 }
 
 .single-question{
-    margin-bottom: 50px;
+    margin-bottom: 18px;
 }
 
 .question{
@@ -26,7 +26,18 @@
 .answers{
     display: flex;
     flex-direction: row;
-    gap:20px
+    gap:20px;
+    /* font-size: 20px; */
+
+}
+.border-btm{
+    width: 100%;
+    height: 1px;
+    background-color: #D6DBF5;
+    
+    opacity: 100%;
+    margin: auto;
+    margin-top: 30px;
 }
 .answer{
     /* display: flex; */
@@ -39,7 +50,9 @@
     color: #293264;
     min-width: 100px;
     text-align: center;
-    padding: 4px;
+    padding: 5px;
+    font-weight: bold;
+    
 }
 
 .answer-selected{
@@ -53,7 +66,8 @@
     color: #293264;
     min-width: 100px;
     text-align: center;
-    padding: 4px;
+    padding: 5px;
+    font-weight: bold;
 }
 .answer-correct{
     /* display: flex; */
@@ -66,8 +80,9 @@
     color: #293264;
     min-width: 100px;
     text-align: center;
-    padding: 4px;
+    padding: 5px;
     border: none;
+    font-weight: bold;
 }
 .answer-wrong{
      /* display: flex; */
@@ -80,9 +95,10 @@
      color: #293264;
      min-width: 100px;
      text-align: center;
-     padding: 4px;
+     padding: 5px;
      opacity: 50%;
      border: none;
+     font-weight: bold;
 }
 .answer-not-selected{
     /* display: flex; */
@@ -95,8 +111,9 @@
     color: #293264;
     min-width: 100px;
     text-align: center;
-    padding: 4px;
+    padding: 5px;
     opacity: 50%;
+    font-weight: bold;
 
 }
 .btn-check{
@@ -107,9 +124,44 @@
     border-radius: 10px;
     border: none;
     margin-left:20px ;
+    font-weight: bold;
 }
 .footer-btn-container{
     text-align: center;
     width: 100%;
     margin: auto;
+}
+
+.start-quiz-container{
+    width: 100%;
+    height:100vh;
+    background-color:#F5F7FB;
+    color: #293264; 
+    font-family:'Trebuchet MS';
+    /* padding-top: 5%; */
+    font-size: 70px;
+    line-height: 18px;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    /* margin: auto; */
+    padding-top: 0%;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+
+}
+.quizzical{
+    /* margin: auto; */
+}
+.quizzical-btn{
+
+    width:250px;
+    height: 70px;
+    background-color: #4D5B9E;
+    color: #F5F7FB;
+    border-radius: 20px;
+    border: none;
+    margin-left:20px ;
+    font-weight: bold;
 }
